--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,14 @@
     "longman/telegram-bot": "^0.80.0",
     "illuminate/database": "^9.45",
     "symfony/dotenv": "^6.2",
-    "illuminate/filesystem": "^9.45"
+    "illuminate/filesystem": "^9.45",
+    "symfony/routing": "^6.2",
+    "symfony/http-foundation": "^6.2"
   },
   "license": "proprietary",
   "autoload": {
     "psr-4": {
-      "LazyTechwork\\YumiBot\\": "src/"
+      "Yumi\\": "src/"
     }
   },
   "authors": [
