--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "symfony/dotenv": "^6.2",
     "illuminate/filesystem": "^9.45",
     "symfony/routing": "^6.2",
-    "symfony/http-foundation": "^6.2"
+    "symfony/http-foundation": "^6.2",
+    "monolog/monolog": "^3.2"
   },
   "license": "proprietary",
   "autoload": {
