--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
   },
   "license": "proprietary",
   "autoload": {
+    "files": [
+      "src/helpers.php"
+    ],
     "psr-4": {
       "Yumi\\": "src/"
     }
