--- a/.editorconfig
+++ b/.editorconfig
@@ -16,6 +16,16 @@ ij_smart_tabs = false
 ij_visual_guides = none
 ij_wrap_on_typing = false
 
+[{*.bash,*.sh,*.zsh}]
+indent_size = 2
+tab_width = 2
+ij_shell_binary_ops_start_line = false
+ij_shell_keep_column_alignment_padding = false
+ij_shell_minify_program = false
+ij_shell_redirect_followed_by_space = false
+ij_shell_switch_cases_indented = false
+ij_shell_use_unix_line_separator = true
+
 [{*.ctp,*.hphp,*.inc,*.module,*.php,*.php4,*.php5,*.phtml}]
 max_line_length = 80
 ij_continuation_indent_size = 4
@@ -29,7 +39,7 @@ ij_php_align_match_arm_bodies = false
 ij_php_align_multiline_array_initializer_expression = false
 ij_php_align_multiline_binary_operation = false
 ij_php_align_multiline_chained_methods = false
-ij_php_align_multiline_extends_list = false
+ij_php_align_multiline_extends_list = true
 ij_php_align_multiline_for = false
 ij_php_align_multiline_parameters = false
 ij_php_align_multiline_parameters_in_calls = false
@@ -41,7 +51,7 @@ ij_php_anonymous_brace_style = end_of_line
 ij_php_api_weight = 28
 ij_php_array_initializer_new_line_after_left_brace = true
 ij_php_array_initializer_right_brace_on_new_line = true
-ij_php_array_initializer_wrap = normal
+ij_php_array_initializer_wrap = on_every_item
 ij_php_assignment_wrap = normal
 ij_php_attributes_wrap = off
 ij_php_author_weight = 28
@@ -50,7 +60,7 @@ ij_php_binary_operation_wrap = normal
 ij_php_blank_lines_after_class_header = 0
 ij_php_blank_lines_after_function = 1
 ij_php_blank_lines_after_imports = 1
-ij_php_blank_lines_after_opening_tag = 0
+ij_php_blank_lines_after_opening_tag = 1
 ij_php_blank_lines_after_package = 1
 ij_php_blank_lines_around_class = 1
 ij_php_blank_lines_around_constants = 0
@@ -62,11 +72,11 @@ ij_php_blank_lines_before_imports = 1
 ij_php_blank_lines_before_method_body = 0
 ij_php_blank_lines_before_package = 1
 ij_php_blank_lines_before_return_statement = 0
-ij_php_blank_lines_between_imports = 0
+ij_php_blank_lines_between_imports = 1
 ij_php_block_brace_style = end_of_line
 ij_php_call_parameters_new_line_after_left_paren = true
 ij_php_call_parameters_right_paren_on_new_line = true
-ij_php_call_parameters_wrap = normal
+ij_php_call_parameters_wrap = on_every_item
 ij_php_catch_on_new_line = false
 ij_php_category_weight = 28
 ij_php_class_brace_style = next_line
@@ -83,7 +93,7 @@ ij_php_else_if_style = combine
 ij_php_else_on_new_line = false
 ij_php_example_weight = 28
 ij_php_extends_keyword_wrap = off
-ij_php_extends_list_wrap = normal
+ij_php_extends_list_wrap = on_every_item
 ij_php_fields_default_visibility = private
 ij_php_filesource_weight = 28
 ij_php_finally_on_new_line = false
@@ -103,11 +113,11 @@ ij_php_if_rparen_on_next_line = true
 ij_php_ignore_weight = 28
 ij_php_import_sorting = alphabetic
 ij_php_indent_break_from_case = true
-ij_php_indent_case_from_switch = false
+ij_php_indent_case_from_switch = true
 ij_php_indent_code_in_php_tags = false
 ij_php_internal_weight = 28
-ij_php_keep_blank_lines_after_lbrace = 2
-ij_php_keep_blank_lines_before_right_brace = 2
+ij_php_keep_blank_lines_after_lbrace = 0
+ij_php_keep_blank_lines_before_right_brace = 0
 ij_php_keep_blank_lines_in_code = 2
 ij_php_keep_blank_lines_in_declarations = 2
 ij_php_keep_control_statement_in_one_line = true
@@ -129,12 +139,12 @@ ij_php_method_brace_style = next_line
 ij_php_method_call_chain_wrap = normal
 ij_php_method_parameters_new_line_after_left_paren = true
 ij_php_method_parameters_right_paren_on_new_line = true
-ij_php_method_parameters_wrap = normal
+ij_php_method_parameters_wrap = on_every_item
 ij_php_method_weight = 28
 ij_php_modifier_list_wrap = false
 ij_php_multiline_chained_calls_semicolon_on_new_line = false
 ij_php_namespace_brace_style = 1
-ij_php_new_line_after_php_opening_tag = false
+ij_php_new_line_after_php_opening_tag = true
 ij_php_null_type_position = in_the_end
 ij_php_package_weight = 28
 ij_php_param_weight = 0
