--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "illuminate/filesystem": "^9.45",
     "symfony/routing": "^6.2",
     "symfony/http-foundation": "^6.2",
-    "monolog/monolog": "^3.2"
+    "monolog/monolog": "^3.2",
+    "doctrine/dbal": "^3.5"
   },
   "license": "proprietary",
   "autoload": {
