--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "require": {
     "php": "^8.2",
     "ext-iconv": "*",
-    "ext-mysql": "*",
+    "ext-mysqli": "*",
     "ext-mbstring": "*",
     "longman/telegram-bot": "^0.80.0",
     "illuminate/database": "^9.45",
