--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+APP_KEY=
 BOT_API_KEY=
 BOT_USERNAME=
 BOT_HOOK_URI=
@@ -6,3 +7,7 @@ DB_HOST=
 DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
+VK_CLIENT_ID=
+VK_REDIRECT_URL=
+VK_SECRET=
+VK_COMMUNITY_KEY=
