--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "ext-iconv": "*",
     "ext-mysqli": "*",
     "ext-mbstring": "*",
+    "ext-openssl": "*",
     "longman/telegram-bot": "^0.80.0",
     "illuminate/database": "^9.45",
     "symfony/dotenv": "^6.2",
@@ -14,7 +15,8 @@
     "symfony/routing": "^6.2",
     "symfony/http-foundation": "^6.2",
     "monolog/monolog": "^3.2",
-    "doctrine/dbal": "^3.5"
+    "doctrine/dbal": "^3.5",
+    "vkcom/vk-php-sdk": "^5.101"
   },
   "license": "proprietary",
   "autoload": {
